Greyform-linux/Python_Application/log/build_2024-09-02_10-01-45/talker_listener/stderr.log
  File "/home/winsys/ros2_ws/src/Greyform-linux/Python_Application/install/talker_listener/lib/python3.10/site-packages/talker_listener/listener_node.py", line 54
    self.message += f"{self.spacing}Excel file path: {msg.excelfile)"
                                                                     ^
SyntaxError: f-string: unmatched ')'

